crates/typecheck/tests/fixtures/errors/guarded_non_exhaustive.ax
enum Shape { Circle(Float), Rect(Float, Float) }
fn area(s: Shape) -> Float {
    match s {
        Circle(r) if r > 0.0 => r
    }
}
